add default case

--- a/Assignment5/local-value.properties
+++ b/Assignment5/local-value.properties
@@ -1,4 +1,5 @@
 # Value constants (no empty or illegal value allowed)
 d.val=10
 j.integers=1-4-8-34-14-6
+j.strings=all values are non-empty
 l.val=true
