fixes bug in A5.

--- a/Assignment5/local-value.properties
+++ b/Assignment5/local-value.properties
@@ -3,3 +3,5 @@ d.val=10
 j.integers=1-4-8-34-14-6
 j.strings=all values are non-empty
 l.val=true
+test.string=sustech,southern university of science and technology
+test.char=s
